--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
             <div class="header-content-inner">
                 <img src="img/tkglogo.png" style="width: 100%;">
                 <p></p>
-                <a href="#about" class="btn btn-primary btn-xl page-scroll">Find Out More</a>
+                <a href="#about" class="btn btn-primary btn-xl page-scroll">Our Mission</a>
             </div>
         </div>
     </header>
@@ -85,7 +85,7 @@
                     <h2 class="section-heading">Living simply to serve the King of kings by loving and serving others.</h2>
                     <hr class="light">
                     <p class="text-faded">We want to see God transform people, transform families, and transform a community - the community of King Lake.  “It’s not important who does the planting, or who does the watering. What’s important is that God makes the seed grow.”  1 Corinthians 3:7 NLT</p>
-                    <a href="#services" class="page-scroll btn btn-default btn-xl sr-button">Get Started!</a>
+                    <a href="#services" class="page-scroll btn btn-default btn-xl sr-button">Our Outreach</a>
                 </div>
             </div>
         </div>
@@ -265,7 +265,8 @@
     <aside class="bg-dark">
         <div class="container text-center">
             <div class="call-to-action">
-                <h2>Full Site Available Soon!</h2>
+                <h2>Full Site Will Be Available Soon</h2>
+                <h4><a href="mailto:cyndi.thekingsgarden@gmail.com">Contact us</a> for more information.</h4>
                 <!-- <a href="http://startbootstrap.com/template-overviews/creative/" class="btn btn-default btn-xl sr-button">Download Now!</a> -->
             </div>
         </div>
