--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
         <div class="container text-center">
             <div class="call-to-action">
                 <h2>Full Site Will Be Available Soon</h2>
-                <h4><a href="mailto:cyndi.thekingsgarden@gmail.com">Contact us</a> for more information.</h4>
+                <h4><a href="mailto:cyndi.thekingsgarden@gmail.com">Contact us</a> for more information</h4>
                 <!-- <a href="http://startbootstrap.com/template-overviews/creative/" class="btn btn-default btn-xl sr-button">Download Now!</a> -->
             </div>
         </div>
