--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@
     <aside class="bg-dark">
         <div class="container text-center">
             <div class="call-to-action">
-                <h2>Full Site Will Be Available Soon</h2>
+                <h2>Full site will be available soon</h2>
                 <h4><a href="mailto:cyndi.thekingsgarden@gmail.com">Contact us</a> for more information</h4>
                 <!-- <a href="http://startbootstrap.com/template-overviews/creative/" class="btn btn-default btn-xl sr-button">Download Now!</a> -->
             </div>
