--- a/index.html
+++ b/index.html
@@ -50,13 +50,13 @@
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right">
                     <li>
-                        <a class="page-scroll" href="#about">About</a>
+                        <a class="page-scroll" href="#about">Mission</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#services">Services</a>
+                        <a class="page-scroll" href="#services">Service</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#portfolio">Events</a>
+                        <a class="page-scroll" href="#portfolio">Outreach</a>
                     </li>
                     <li>
                         <a class="page-scroll" href="#contact">Contact</a>
