--- a/index.html
+++ b/index.html
@@ -85,13 +85,13 @@
                     <h2 class="section-heading">Living simply to serve the King of kings by loving and serving others.</h2>
                     <hr class="light">
                     <p class="text-faded">We want to see God transform people, transform families, and transform a community - the community of King Lake.  “It’s not important who does the planting, or who does the watering. What’s important is that God makes the seed grow.”  1 Corinthians 3:7 NLT</p>
-                    <a href="#services" class="page-scroll btn btn-default btn-xl sr-button">Our Outreach</a>
+                    <!-- <a href="#services" class="page-scroll btn btn-default btn-xl sr-button">Our Outreach</a> -->
                 </div>
             </div>
         </div>
     </section>
 
-    <section id="services">
+    <!-- <section id="services">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
@@ -133,9 +133,9 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
 
-    <section class="no-padding" id="portfolio">
+    <!-- <section class="no-padding" id="portfolio">
         <div class="container-fluid">
             <div class="row no-gutter popup-gallery">
                 <div class="col-lg-3 col-sm-6">
@@ -260,7 +260,7 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
 
     <aside class="bg-dark">
         <div class="container text-center">
